# iggpu

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  iggpu_config.h.in  minimal_example_native.cc  minimal_example_web.cc  simple_server.js
include/iggpu/: log.h
platform/include/iggpu/: app_base.h
platform/native_src/: app_base.cc
platform/web_src/: app_base.cc
samples/: CMakeLists.txt
samples/simple_triangle/: CMakeLists.txt  main_native.cc  main_web.cc  simple_triangle_app.cc  simple_triangle_app.h
src/: log.cc
